--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "scripts": {
     "build": "webpack",
     "start": "webpack serve",
-    "test": "echo \"Error: no test specified\" && exit 1",
     "cypress": "cypress open"
   },
   "repository": {
@@ -22,6 +21,8 @@
   "homepage": "https://github.com/hayeon9826/react-crud#readme",
   "dependencies": {
     "@cypress/webpack-preprocessor": "^5.11.1",
+    "@headlessui/react": "^1.6.1",
+    "@heroicons/react": "^1.0.6",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
     "@redux-saga/types": "^1.1.0",
@@ -33,7 +34,9 @@
     "cross-env": "^7.0.3",
     "cypress-xpath": "^1.6.2",
     "dayjs": "^1.11.2",
+    "heroicons": "^1.0.6",
     "immutable": "^4.0.0",
+    "postcss-cli": "^9.1.0",
     "ramda": "^0.28.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
@@ -59,6 +62,7 @@
     "@types/styled-components": "^5.1.25",
     "@typescript-eslint/eslint-plugin": "^5.23.0",
     "@typescript-eslint/parser": "^5.23.0",
+    "autoprefixer": "^10.4.7",
     "babel-loader": "^8.2.5",
     "css-loader": "^6.7.1",
     "cypress": "^9.6.1",
@@ -67,8 +71,11 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.29.4",
     "html-webpack-plugin": "^5.5.0",
+    "postcss": "^8.4.14",
+    "postcss-loader": "^7.0.0",
     "prettier": "^2.6.2",
     "style-loader": "^3.3.1",
+    "tailwindcss": "^3.0.24",
     "typescript": "^4.6.4",
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2",
