--- a/package.json
+++ b/package.json
@@ -46,8 +46,7 @@
     "react-toastify": "^9.0.1",
     "redux-actions": "^2.6.5",
     "redux-pender": "^2.0.12",
-    "redux-saga": "^1.1.3",
-    "styled-components": "^5.3.5"
+    "redux-saga": "^1.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.17.10",
@@ -59,7 +58,6 @@
     "@types/node": "^17.0.33",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.3",
-    "@types/styled-components": "^5.1.25",
     "@typescript-eslint/eslint-plugin": "^5.23.0",
     "@typescript-eslint/parser": "^5.23.0",
     "autoprefixer": "^10.4.7",
