--- a/.babelrc
+++ b/.babelrc
@@ -15,6 +15,10 @@
       {
         "regenerator": true
       }
-    ]
-  ]
+    ],
+    ["@babel/plugin-proposal-class-properties"]
+  ],
+  "assumptions": {
+    "setPublicClassFields": false
+  }
 }
