--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "dayjs": "^1.11.2",
     "heroicons": "^1.0.6",
     "immutable": "^4.0.0",
+    "mobx": "^6.5.0",
+    "mobx-react-lite": "^3.4.0",
     "postcss-cli": "^9.1.0",
     "ramda": "^0.28.0",
     "react": "^18.1.0",
