--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "heroicons": "^1.0.6",
     "immutable": "^4.0.0",
     "mobx": "^6.5.0",
+    "mobx-react": "^7.4.0",
     "mobx-react-lite": "^3.4.0",
     "postcss-cli": "^9.1.0",
     "ramda": "^0.28.0",
